Espaço na mensagem que mostra o nome e adiçao da ,

--- a/codigos_javascript/js01_Estrutura2.htm
+++ b/codigos_javascript/js01_Estrutura2.htm
@@ -23,7 +23,7 @@
     js_nome = window.prompt('Entre com seu nome:' , 'Digite seu nome nesta caixa');
 
     /* Saída de Dados */
-    document.write('Olá' + js_nome + 'Seja Bem Vindo');
+    document.write('Olá ' + js_nome + ' ,Seja Bem-Vindo');
     //Mensagem de Saudação Personalizada
 
 </script>
